--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   glycin-loaders-0.1.1.tar.xz: f7ba202333f8ede0786e56115448533025e89b8f
+  vendor.tar.xz: 5c92b0936b4c2a7c35984559bea963a6262471c4
