--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  glycin-loaders-0.1.2.tar.xz: 794aa9fb173c2602db9776507dde798477bf7f32
-  vendor.tar.xz: 0f36dd4a83cefbb7574878ea7ab132230923dca9
+  glycin-loaders-1.0.0.tar.xz: 77c90e0c9e3a6462c0387c4368fc0b2ff46f348f
+  #vendor.tar.xz: 0f36dd4a83cefbb7574878ea7ab132230923dca9
