--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  glycin-loaders-1.0.1.tar.xz: 7567077340e6349f8459bd2fdac092806b3f90dc
+  glycin-1.1.1.tar.xz: 75c1f85caaa1f13ed50cfc5479de2f92fb2bcb16
   #vendor.tar.xz: 0f36dd4a83cefbb7574878ea7ab132230923dca9
