--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  glycin-1.2.3.tar.xz: 87e8714127985fb2e8f34b85fe96af87343c67d2
+  glycin-2.0.rc.tar.xz: 8a5d4215299067cd5ff0d3925a057a035859db4d
   #vendor.tar.xz: 0f36dd4a83cefbb7574878ea7ab132230923dca9
