--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
   glycin-2.0.rc.tar.xz: 8a5d4215299067cd5ff0d3925a057a035859db4d
-  #vendor.tar.xz: 0f36dd4a83cefbb7574878ea7ab132230923dca9
+  vendor.tar.xz: 98b57b417da94a78ab3b886cc9dda0775c6395f9
