--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  glycin-2.0.rc.tar.xz: 8a5d4215299067cd5ff0d3925a057a035859db4d
-  vendor.tar.xz: 98b57b417da94a78ab3b886cc9dda0775c6395f9
+  glycin-2.0.0.tar.xz: 31004deaf2737de405c8e1140e79ca23ab16d64e
+  vendor.tar.xz: 72a94606ee7ed741157fbf688aeb39ac38737bed
